# python-pods

./: README.md  deps.edn  main.py  pyproject.toml  run_tests.sh
.circleci/: config.yml
src/: bencode_reader.py  edn.py  patch_registry.py  pod_modules.py  python_pods.py  pythonpods.py  transit2.py
test/: test_instaparse.py  test_json.py
test-pod/pod/: test_pod.clj
test-resources/: test_program.clj  test_program.py
