[project]
name = "python_pods"
version = "0.1.0"
description = "A faithful port of babashka pods to python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bencode-py>=4.0.0",
    "edn-format>=0.7.5",
    "pytest>=8.4.0",
    "requests>=2.32.3",
    "tomli>=2.2.1",
    "transit-python2>=0.8.321",
]
